alpm-srcinfo/tests/parse_error_snapshots/missing_pkgname.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\tpkgver = 1.0.0\n\tpkgrel = 1\n\n# Missing pkgname section.\n\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid input
 | 
 | 
 | ^ expected a pkgname section
